# shelflife

./: .gitignore  Dockerfile  Dockerfile.mcp  README.md  alembic.ini  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 2026_02_06_1811-initial_schema.py  2026_02_06_1826-add_open_library_key.py  2026_02_14_0000-add_reading_tracking.py  2026_02_21_0000-float_rating.py  2026_03_01_0000-multi_tenancy_and_sync.py
docker/mcp-catalog/: server.yaml  tools.json
docs/: architecture.md  phase2-enrichment.md
shelflife/: __init__.py  app.py  auth.py  config.py  database.py  id.py
shelflife/database/: __init__.py  _postgres.py  _sqlite.py
shelflife/mcp/: __main__.py  client.py  server.py
shelflife/mcp/tools/: discovery.py  importing.py  library.py  profile.py  reading.py  reviews.py  shelves.py  tags.py  types.py
shelflife/models/: __init__.py  book.py  reading.py  review.py  shelf.py  tag.py  user.py  user_book.py
shelflife/routers/: auth.py  books.py  hash.py  import_export.py  reading.py  reviews.py  shelves.py  tags.py
shelflife/schemas/: book.py  hash.py  reading.py  review.py  shelf.py  tag.py
shelflife/services/: enrich_service.py  goodreads.py  import_service.py  openlibrary.py
tests/: conftest.py  test_api.py  test_enrich_api.py  test_goodreads_parser.py  test_mcp_client.py  test_mcp_server.py  test_mcp_tools.py  test_openlibrary.py  test_reading.py
