[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "shelflife"
version = "0.1.0"
description = "Personal book management system — a self-hosted alternative to Goodreads"
readme = "docs/architecture.md"
license = "MIT"
requires-python = ">=3.12"
authors = [
    { name = "Duncan McKinnon" },
]
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "sqlalchemy[asyncio]>=2.0",
    "aiosqlite>=0.20.0",
    "alembic>=1.14.0",
    "pydantic>=2.0",
    "python-multipart>=0.0.12",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.27.0",
]

[tool.hatch.build.targets.wheel]
packages = ["shelflife"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
